--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             }
 
             const parts = [];
-            let paragraphs = inputText.split('\n\n'); // 根據段落進行分隔
+            let paragraphs = inputText.split('\n\n\n'); // 根據段落進行分隔
             paragraphs.forEach(paragraph => {
                 let start = 0;
                 while (start < paragraph.length) {
