--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
             } else {
                 outputDiv.innerHTML = "未能分段，請檢查輸入的文本是否正確。";
             }
+
+            // 清空文本框，準備輸入新的文本
+            document.getElementById('inputText').value = '';
         }
     </script>
 </body>
